--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -24,40 +24,8 @@
 proc cleanupAndExit {code} {
    # output all shell code generated on stdout
    renderFlush
-
-   # report execution time if asked
-   if {[getState timer]} {
-      reportSeparateNextContent
-      reportTimer "Total execution took %.3f ms" $::timer_start [clock\
-         microseconds]
-   }
-
-   # finish output document if json format enabled
-   if {[isStateEqual report_format json]} {
-      # render error messages all together
-      if {[info exists ::g_report_erralist]} {
-         # ignite report first to get eventual error message from report
-         # initialization in order 'foreach' got all messages prior firing
-         report "\"errors\": \[" 1
-         foreach {sev msg} $::g_report_erralist {
-            # split message in lines
-            lappend dispmsglist "\n{ \"severity\": \"$sev\", \"message\": \[\
-               \"[join [split [charEscaped $msg \"] \n] {", "}]\" \] }"
-         }
-         report "[join $dispmsglist ,] \]"
-      }
-      # inhibit next content separator if output is ending
-      if {[isStateDefined report_sep_next]} {
-         unsetState report_sep_next
-      }
-      report \}
-   }
-
-   # close pager if enabled
-   if {[isStateDefined reportfd] && ![isStateEqual reportfd stderr]} {
-      catch {flush [getState reportfd]}
-      catch {close [getState reportfd]}
-   }
+   # output last messages on the report file descriptor and close it
+   reportFlush
 
    exit $code
 }
