Deduce shelltype state value from shell state
Add initStateShellType procedure to set shelltype state when first
retrieving its value (with getState). shelltype is set based on value
set for shell state.

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -27,7 +27,8 @@ proc raiseErrorCount {} {
 proc renderFalse {} {
    if {[isStateDefined false_rendered]} {
       reportDebug {false already rendered}
-   } elseif {[isStateDefined shelltype]} {
+   # no shell code to render false if shell not set
+   } elseif {[isStateDefined shell]} {
       # setup flag to render only once
       setState false_rendered 1
 
