Rename cleanupAndExit into flushAndExit

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -673,7 +673,7 @@ proc renderSettings {} {
 
 # Output all gathered shell code to stdout. This is a separate proc rather the
 # final code of renderSettings as such output is also done when exiting after
-# an error. Stdout is flushed from cleanupAndExit proc
+# an error. Stdout is flushed from flushAndExit proc
 proc renderFlush {} {
    if {[info exists ::g_shcode_out]} {
       # required to work on cygwin, shouldn't hurt real linux
