Core code for cmdModuleModToSh
Add code for mod-to-sh sub-command. Introduce modtosh_real_shell shell
to save evaluation shell set for modulecmd.tcl. Then shell set for
mod-to-sh is set as target shell for shell code production.

Modulefiles specified are loaded through cmdModuleLoad. Generated shell
code is then sent to the report message channel (stderr) by
renderSettings. Shell code is then cleared and modulecmd.tcl evaluation
shell is restored to get final evaluation status on regular shell code
output channel (stdout).

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -655,6 +655,21 @@ proc renderSettings {} {
       }
    }
 
+   # if currently processing mod-to-sh subcmd, send shell code to the message
+   # channel then reset code and shell state to get evaluation result shell
+   # code on stdout channel
+   if {[getState modtosh_real_shell] ne {}} {
+      if {[info exists g_shcode_out]} {
+         report [join $::g_shcode_out \n]
+         unset g_shcode_out
+      }
+
+      setState shell [getState modtosh_real_shell]
+      if {[isStateDefined shelltype]} {
+         unsetState shelltype
+      }
+   }
+
    # return text value if defined even if error happened
    if {[info exists ::g_return_text]} {
       reportDebug {text value should be returned.}
