Clear pushenv stacks on clear subcmd

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2115,6 +2115,9 @@ proc cmdModuleClear {doit doitset} {
          __MODULES_LMCONFLICT __MODULES_LMPREREQ __MODULES_LMSOURCESH \
          __MODULES_LMTAG __MODULES_LMEXTRATAG __MODULES_LMVARIANT _LMFILES_]
 
+      # add any stack of saved values to the list to unset
+      lappend vartoclear {*}[array names ::env -glob __MODULES_PUSHENV_*]
+
       # add any reference counter variable to the list to unset
       lappend vartoclear {*}[array names ::env -glob __MODULES_SHARE_*]
 
