Filter Modules-specific env var from mod-to-sh result
When running modulefile evaluation for mod-to-sh sub-command, removes
all Modules-specific environment variable from result to only report the
environment changes done by modulefile, not the Modules load context.

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -190,6 +190,15 @@ proc renderSettings {} {
       renderAutoinit
    }
 
+   # filter Modules-specific environment variables for mod-to-sh subcmd
+   if {[getState modtosh_real_shell] ne {}} {
+      foreach globvar [getModulesEnvVarGlobList 1] {
+         foreach var [array names g_stateEnvVars -glob $globvar] {
+            unset g_stateEnvVars($var)
+         }
+      }
+   }
+
    # new environment variables
    foreach var [array names g_stateEnvVars] {
       switch -- $g_stateEnvVars($var) {
