Silence message report on mod-to-sh subcmd
When performing a mod-to-sh sub-command make message report silent not
to mix these messages with the produced shell code that will be output
on the message channel.

If a debugging verbosity is defined (trace mode or above), message
report is left as is.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2645,6 +2645,13 @@ proc cmdModuleModToSh {shell args} {
       unsetState shelltype
    }
 
+   # silence message report (avoid mix with produced shell code) unless if
+   # a debugging mode is set
+   if {![isVerbosityLevel trace]} {
+      unsetConf verbosity
+      set ::asked_verbosity silent
+   }
+
    # modulefile evaluation is done against mod-to-sh target shell which means
    # module-info will return mod-to-sh shell value
    return [cmdModuleLoad load 1 0 0 {} {*}$args]
