Check state is defined before unset in unsetState

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -170,8 +170,10 @@ proc getState {state {valifundef {}} {catchinitproc 0}} {
 
 # Clear state
 proc unsetState {state} {
-   unset ::g_states($state)
-   reportDebug "$state unset"
+   if {[isStateDefined $state]} {
+      unset ::g_states($state)
+      reportDebug "$state unset"
+   }
 }
 
 # Set state value
