Allow module to be specified on source subcmd
Update source sub-command to accept module specification as argument.
File path stay the main specification kind. Which means if a file
foo/1.0 exists, this file is sourced and not the modulefile foo/1.0 in
enabled modulepath.

Fixes #424.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -356,7 +356,8 @@ proc module {command args} {
    # parse module version specification
    defineParseModuleSpecificationProc [getConf advanced_version_spec]
    if {$command in [list avail paths whatis load unload switch help test\
-      display path is-avail edit try-load load-any list lint mod-to-sh]} {
+      display path is-avail edit try-load load-any list lint mod-to-sh\
+      source]} {
       set args [parseModuleSpecification 0 {*}$args]
    }
 
@@ -1009,7 +1010,7 @@ if {[catch {
                   set accept_minus_arg [expr {$subcmdtest eq {ml} ||\
                      ([getConf advanced_version_spec] && $subcmdtest in\
                      {avail list display help is-avail is-loaded load path\
-                     paths switch test unload whatis mod-to-sh})}]
+                     paths switch test unload whatis mod-to-sh source})}]
                }
                # spare argument if minus arg is accepted
                if {[info exists accept_minus_arg] && $accept_minus_arg} {
