Allow collection name as argument to savelist subcmd
Allow the savelist sub-command to receive collection name as argument.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -391,8 +391,7 @@ proc module {command args} {
             set argnberr 1
          }
       }
-      refresh - reload - aliases - purge - savelist - initlist - initclear -\
-      autoinit {
+      refresh - reload - aliases - purge - initlist - initclear - autoinit {
          if {[llength $args] != 0} {
             set argnberr 1
          }
@@ -661,7 +660,7 @@ proc module {command args} {
          cmdModuleSaveshow {*}$args
       }
       savelist {
-         cmdModuleSavelist $show_oneperline $show_mtime
+         cmdModuleSavelist $show_oneperline $show_mtime {*}$args
       }
       initadd {
          cmdModuleInit add {*}$args
