--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -736,7 +736,7 @@ proc cmdModuleSaveshow {{coll default}} {
    displaySeparatorLine
 }
 
-proc cmdModuleSavelist {show_oneperline show_mtime} {
+proc cmdModuleSavelist {show_oneperline show_mtime args} {
    # if a target is set, only list collection matching this
    # target (means having target as suffix in their name)
    set colltarget [getConf collection_target]
