Allow search match option on savelist subcmd
Allow to pass the search match options (-S/-C) to the savelist
sub-command.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -660,7 +660,7 @@ proc module {command args} {
          cmdModuleSaveshow {*}$args
       }
       savelist {
-         cmdModuleSavelist $show_oneperline $show_mtime {*}$args
+         cmdModuleSavelist $show_oneperline $show_mtime $search_match {*}$args
       }
       initadd {
          cmdModuleInit add {*}$args
