--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1795,7 +1795,8 @@ Collection of modules handling commands:
   restore         [collection|file] Restore module list from collection or file
   saverm          [collection]      Remove saved collection
   saveshow        [collection|file] Display information about collection
-  savelist  [-t|-l|-j] [coll ...]   List all or matching saved collections
+  savelist  [-t|-l|-j] [-S|-C] [collection ...]
+                                    List all or matching saved collections
   is-saved        [collection ...]  Test if any of the collection(s) exists
 
 Environment direct handling commands:
