Unset mod spec on source subcmd if file exists
In case module specification corresponds to a full path name file, unset
parsed module specification on source sub-command. It is done not to
confuse specific character in file path name (like '+') with module
variant specification.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -814,6 +814,9 @@ proc cmdModuleSource {mode args} {
          set modfile $absfpath
          set modname $absfpath
          set modnamevr $absfpath
+         # unset module specification not to confuse specific char in file
+         # path (like '+') with variant specification
+         unsetModuleVersSpec $mod
          set mod $absfpath
       # if not a path specification, try to resolve a modulefile
       } elseif {![isModuleFullPath $rawarg]} {
