--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -209,7 +209,8 @@ proc parseModuleCommandArgs {topcall cmd ignerr args} {
             }
             --all {
                # include hidden modules only on a limited set of command
-               if {$cmd in [list avail aliases search whatis ml list lint]} {
+               if {$cmd in [list avail aliases search whatis ml list lint\
+                  savelist]} {
                   setState hiding_threshold 2
                } else {
                   lappend otherargs $arg
@@ -221,7 +222,7 @@ proc parseModuleCommandArgs {topcall cmd ignerr args} {
                if {$cmd eq {use}} {
                   set addpath_pos append
                } elseif {$cmd in [list avail aliases search whatis ml list\
-                  lint]} {
+                  lint savelist]} {
                   setState hiding_threshold 2
                } else {
                   lappend otherargs $arg
