--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1797,7 +1797,7 @@ Collection of modules handling commands:
   restore         [collection|file] Restore module list from collection or file
   saverm          [collection]      Remove saved collection
   saveshow        [collection|file] Display information about collection
-  savelist  [-t|-l|-j] [-S|-C] [collection ...]
+  savelist  [-a] [-t|-l|-j] [-S|-C] [collection ...]
                                     List all or matching saved collections
   is-saved        [collection ...]  Test if any of the collection(s) exists
 
